--- a/Cwiczenia_6/Cwiczenia_06.ipynb
+++ b/Cwiczenia_6/Cwiczenia_06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "id": "ee49da09-e3f5-4c4d-b81e-ad4ac33956a9",
    "metadata": {
     "tags": []
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "id": "8ba4875d-7919-4506-b5c6-f9294347dad6",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "id": "e74ba54d-673e-4496-8296-1e9012c2c67c",
    "metadata": {
     "tags": []
@@ -47,8 +47,8 @@
     "currencies = ['USD', 'CHF', 'EUR', 'GBP', 'JPY']\n",
     "for currency in currencies:    \n",
     "    json_api = fetch_currency_data(currency)\n",
-    "    last_25 = [rate['mid'] for rate in json_api['rates'][-25:]]\n",
-    "    date_25 = [date['effectiveDate'] for date in json_api['rates'][-25:]]\n",
+    "    last_25 = [rate['mid'] for rate in json_api['rates']]\n",
+    "    date_25 = [date['effectiveDate'] for date in json_api['rates']]\n",
     "    for date, value in zip(date_25, last_25):\n",
     "        currency_dict = {'code': currency, 'date': date, 'value': value}\n",
     "        currencies_data.append(currency_dict)"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "id": "0ac741d2-d3ac-4f85-abe0-ce34e012c8a1",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "id": "9f37e159-ffbe-490b-af19-fb92dcd0d7ba",
    "metadata": {
     "tags": []
@@ -205,7 +205,7 @@
        " {'code': 'JPY', 'date': '2024-04-23', 'value': 0.026226}]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ae95f1-235b-42e5-b9b1-cdd37e3f1479",
+   "id": "f8227ac2-efd7-4401-885e-002eec6e7c29",
    "metadata": {},
    "outputs": [],
    "source": []
